--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -4,11 +4,12 @@
 
 .grid {
     max-width: 1000px;
-    height: 100vh;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    gap: 20px;
+    gap: 25px;
+   justify-items: center;
+   align-items: center;
 }
 
 
