--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -3,6 +3,6 @@
 /* ============================================ */
 
 img {
-    display: block;
-    max-width: 100%;
+    display: flex;
+    width: 100%;
 }
